UiComponentColumnStructure wrap now correctly for responsiveness

--- a/res/css/uicomponents/UiComponentColumnStructure.css
+++ b/res/css/uicomponents/UiComponentColumnStructure.css
@@ -17,7 +17,6 @@
 }
 
 .UiComponentColumnStructure.innerGap > div:not(:last-child) {
-	margin-right: 20px;
 }
 
 .UiComponentColumnStructure > div.menu {
